[package]
name = "kvdb-toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
lru = "0.8"
tokio = { version = "1.19", features = ["full"] }
tonic = "0.8"
prost = "0.11"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8"

[lib]
name = "kvdb"
path = "src/lib.rs"

[[bin]]
name = "kvdb-server"
path = "src/bin/server.rs"

[[bin]]
name = "kvdb-client"
path = "src/bin/client.rs"
